# bitboard-chess-engine

./: CMakeLists.txt  README.md
include/: bishop.h  bitboard.h  board.h  fen.h  king.h  knight.h  pawn.h  queen.h  rook.h  utils.h
src/: bishop.c  bitboard.c  board.c  fen.c  king.c  knight.c  main.c  pawn.c  queen.c  rook.c  utils.c
